
[profile.release]
panic = 'unwind'

[workspace]
members = [
    'bin',
    'client/consensus',
    'client/rpc-core',
    'client/rpc',
    'primitives',
    'primitives/evm',
    'primitives/consensus',
    'primitives/rpc',
    'runtime/pangu',
    'runtime/fuxi',
    'pallets/common',
    'pallets/assets',
    'pallets/names',
    'pallets/nft',
    'pallets/token',
    'pallets/trade',
    'pallets/validator-set',
    'pallets/staking',
    'pallets/rewards',
    'pallets/ethereum',
    'pallets/evm',
]