
[profile.release]
panic = 'unwind'

[workspace]
members = [
    'bin',
    'primitives',
    'runtime/pangu',
    'runtime/fuxi',
    'pallets/common',
    'pallets/assets',
    'pallets/names',
    'pallets/forum',
    'pallets/nft-multi',
    'pallets/nft-blindbox',
    'pallets/nft-trade',
    'pallets/nft-auction',
    'pallets/price',
    'pallets/token',
    'pallets/trade',
    'pallets/validator-set',
    'pallets/staking',
    'pallets/rewards',
    'pallets/bridge',
    'pallets/support',
]