[package]
name = "uart-runtime"
version = "2.0.0-rc6"
authors = ["yxf4559@gmail.com"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/uni-arts-chain/uni-arts-network"
repository = "https://github.com/uni-arts-chain/uni-arts-network/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

pallet-aura = { version = "2.0.0-rc6", default-features = false }
pallet-balances = { version = "2.0.0-rc6", default-features = false }
frame-support = { version = "2.0.0-rc6", default-features = false }
pallet-grandpa = { version = "2.0.0-rc6", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-rc6", default-features = false }
pallet-sudo = { version = "2.0.0-rc6", default-features = false }
frame-system = { version = "2.0.0-rc6", default-features = false }
pallet-timestamp = { version = "2.0.0-rc6", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc6", default-features = false }
frame-executive = { version = "2.0.0-rc6", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-rc6", default-features = false }
sp-block-builder = { default-features = false, version = "2.0.0-rc6"}
sp-consensus-aura = { version = "0.8.0-rc6", default-features = false }
sp-core = { version = "2.0.0-rc6", default-features = false }
sp-inherents = {  default-features = false, version = "2.0.0-rc6"}
sp-offchain = { version = "2.0.0-rc6", default-features = false }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
sp-session = { version = "2.0.0-rc6", default-features = false }
sp-std = { version = "2.0.0-rc6", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc6", default-features = false  }
sp-version = { version = "2.0.0-rc6", default-features = false }
pallet-session = { version = "2.0.0-rc6", default-features = false }
pallet-nicks = { version = "2.0.0-rc6", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "2.0.0-rc6", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc6", default-features = false }

pallet-certificate = { path = "../pallets/certificate", default-features = false }
pallet-assets = { path = "../pallets/assets", default-features = false }
pallet-names = { path = "../pallets/names", default-features = false }
pallet-nft = { path = "../pallets/nft", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
  	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-names/std",
	"pallet-nft/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
    "pallet-nicks/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
  	"frame-system-rpc-runtime-api/std"
]
