[package]
name = "uart-runtime"
version = "2.0.0"
authors = ["yxf4559@gmail.com"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/uni-arts-chain/uni-arts-network"
repository = "https://github.com/uni-arts-chain/uni-arts-network/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

pallet-aura = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
pallet-grandpa = { version = "2.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
pallet-sudo = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-transaction-payment = { version = "2.0.0", default-features = false }
frame-executive = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false }
sp-block-builder = { default-features = false, version = "2.0.0"}
sp-consensus-aura = { version = "0.8.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-inherents = {  default-features = false, version = "2.0.0"}
sp-offchain = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-session = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false  }
sp-version = { version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", default-features = false, features = ["historical"] }
pallet-nicks = { version = "2.0.0", default-features = false }
pallet-vesting = { version = "2.0.0", default-features = false }
pallet-collective = { version = "2.0.0", default-features = false }
pallet-treasury = { version = "2.0.0", default-features = false }
pallet-identity = { version = "2.0.0", default-features = false }
pallet-scheduler = { version = "2.0.0", default-features = false }

# Used for RPCs
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
pallet-staking-rpc-runtime-api = { version = "0.1.0", default-features = false, path = "../pallets/staking/rpc/runtime-api"}

# Uni-Arts pallets
pallet-certificate = { path = "../pallets/certificate", default-features = false }
pallet-assets = { path = "../pallets/assets", default-features = false }
pallet-names = { path = "../pallets/names", default-features = false }
pallet-nft = { path = "../pallets/nft", default-features = false }
pallet-rewards = { path = "../pallets/rewards", default-features = false }
pallet-staking = { path = "../pallets/staking", default-features = false }
pallet-validator-set = { path = "../pallets/validator-set", default-features = false }
pallet-token = { path = "../pallets/token", default-features = false }
pallet-trade = { path = "../pallets/trade", default-features = false }
primitives = { package = "uniart-primitives", path = "../primitives", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-vesting/std",
	"pallet-collective/std",
	"pallet-treasury/std",
	"pallet-identity/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
  	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-names/std",
	"pallet-nft/std",
	"pallet-validator-set/std",
	"pallet-token/std",
	"pallet-trade/std",
	"pallet-staking/std",
		"pallet-staking-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
    "pallet-nicks/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
  	"frame-system-rpc-runtime-api/std",
	"primitives/std",
]
