[package]
name = "pallet-dynamic-fee"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Dynamic fee handling for EVM."
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "3.0.0" }
sp-core = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-inherents = { version = "3.0.0" }
frame-system = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"frame-system/std",
	"frame-support/std",
]
