[package]
authors = ['Terry.Tu']
edition = '2018'
name = 'pallet-etherscan-worker'
version = "2.0.0"
homepage = "https://uniarts.me"
repository = "https://github.com/uni-arts-chain/uni-arts-network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
sp-application-crypto = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }
ethereum-types = { version = "0.9", default-features = false }
rlp = { version = "0.4", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
hex = { version = "0.4", default-features = false }

[features]
default = ['std']
std = [
	"serde",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"sp-application-crypto/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"lite-json/std",
	"ethereum-types/std",
	"rlp/std",
]
