[package]
description = "FRAME EVM contracts pallet"
edition     = "2018"
license     = "GPL-3.0"
name        = "pallet-evm"
readme      = "README.md"
version     = "2.0.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
evm                   = { version = "0.20.0", default-features = false, features = ["with-codec"] }
evm-gasometer         = { version = "0.20.0", default-features = false }
evm-runtime           = { version = "0.20.0", default-features = false }
primitive-types       = { version = "0.7.0", default-features = false, features = ["rlp", "byteorder"] }
rlp                   = { version = "0.4", default-features = false }
serde                 = { version = "1.0.101", optional = true, features = ["derive"] }
sha3                  = { version = "0.8", default-features = false }
log = "0.4.8"

# uniarts
pallet-balances = { version = "2.0.0", default-features = false }
fp-evm = { default-features = false, path = "../../primitives/evm" }

# substrate
frame-support    = { version = "2.0.0", default-features = false }
frame-system     = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
sp-core          = { version = "2.0.0", default-features = false }
sp-io            = { version = "2.0.0", default-features = false }
sp-runtime       = { version = "2.0.0", default-features = false }
sp-std           = { version = "2.0.0", default-features = false }

[dev-dependencies]

[features]
default = ["std"]

std = [
	"codec/std",
	"serde",
	"evm/std",
	"evm/with-serde",
	"evm-gasometer/std",
	"evm-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"primitive-types/std",
	"rlp/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"fp-evm/std",
	"pallet-balances/std",
]
