[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet nft'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-nft-multi'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false}
sp-core = { version = "2.0.1", default-features = false }
transaction-payment = { version = "2.0.1", package = 'pallet-transaction-payment', default-features = false}
pallet-names = { path = "../names", default-features = false}
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
log = "0.4.8"
sha3 = { version = "0.8", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
# orml
orml-currencies = { default-features = false, version = '0.3.0' }
orml-tokens = { default-features = false, version = '0.3.0' }
orml-traits = { default-features = false, version = '0.3.0' }

uniarts-primitives = { version = "2.0.1", default-features = false, path = "../../primitives" }

[dev-dependencies]
sp-core = { version = "2.0.1"}
pallet-balances = { version = "2.0.1"}


[features]
default = ['std']
std = [
    'codec/std',
    "serde/std",
    'frame-support/std',
    'frame-system/std',
    'pallet-names/std',
    'sp-runtime/std',
    'sp-std/std',
    "sp-core/std",
    "sha3/std",
    "orml-traits/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "uniarts-primitives/std",
]
