[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet nft'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-nft'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false}
transaction-payment = { version = "2.0.0", package = 'pallet-transaction-payment', default-features = false}
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
log = "0.4.8"


[dev-dependencies]
sp-core = { version = "2.0.0"}
pallet-balances = { version = "2.0.0"}


[features]
default = ['std']
std = [
    'codec/std',
    "serde/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
