[package]
name = "pallet-staking"
version = "0.1.0"
authors = ["yxf <yxf4559@gmail.com>"]
edition = "2018"


[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }