[package]
name = "module-support"
version = "0.1.0"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }

uniarts-primitives = { version = "2.0.1", default-features = false, path = "../../primitives" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "uniarts-primitives/std",

]