[package]
name = "uniarts-chain-primitives"
version = "3.0.0"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
uniarts-primitives = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.8" , default-features = false }

pallet-evm = { version = "3.0.0-dev", default-features = false, path = "../../pallets/evm" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "uniarts-primitives/std",
    "pallet-evm/std",
]