[package]
name = "pangu-runtime"
version = "3.0.0"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"
build   = "build.rs"
description = "Uniarts node runtime for pangu network"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }

frame-system = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-executive = { version = "3.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }

sp-api = { version = "3.0.0", default-features = false }
sp-block-builder = { default-features = false, version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = {  default-features = false, version = "3.0.0"}
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false  }
sp-version = { version = "3.0.0", default-features = false }

pallet-aura = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
pallet-nicks = { version = "3.0.0", default-features = false }
pallet-vesting = { version = "3.0.0", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false }
pallet-identity = { version = "3.0.0", default-features = false }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-multisig = { version = "3.0.0", default-features = false }
pallet-proxy = { version = "3.0.0", default-features = false }
pallet-utility = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-recovery = { version = "3.0.0", default-features = false }
pallet-society = { version = "3.0.0", default-features = false }
pallet-elections-phragmen = { version = "3.0.0", default-features = false }
pallet-contracts = { version = "3.0.0", default-features = false }
pallet-contracts-primitives = { version = "3.0.0", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }

# Used for RPCs
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-staking-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" }

# Uni-Arts pallets
uniarts-common = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0", default-features = false }
pallet-assets = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
pallet-names = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
pallet-nft = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
pallet-rewards = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
pallet-staking = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
pallet-validator-set = { git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }
# pallet-lotteries = { path = "../../pallets/lotteries", default-features = false }
primitives = { package = "uniarts-primitives", git = "https://github.com/uni-arts-chain/uni-arts-common.git", tag = "v3.0.0" , default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }


[build-dependencies]
substrate-wasm-builder = '4.0.0'

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-benchmarking/std",
    "frame-system-benchmarking/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-authorship/std",
    "pallet-vesting/std",
    "pallet-collective/std",
    "pallet-membership/std",
    "pallet-treasury/std",
    "pallet-elections-phragmen/std",
    "pallet-identity/std",
    "pallet-randomness-collective-flip/std",
    "pallet-session/std",
    "pallet-society/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "uniarts-common/std",
    "pallet-names/std",
    "pallet-nft/std",
    "pallet-validator-set/std",
    "pallet-rewards/std",
    "pallet-staking-rpc-runtime-api/std",
    "pallet-multisig/std",
    "pallet-proxy/std",
    "pallet-utility/std",
    "pallet-indices/std",
    "pallet-recovery/std",
    "pallet-nicks/std",
    "pallet-assets/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "primitives/std",
]

runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "hex-literal",
    "frame-system/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-society/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-rewards/runtime-benchmarks",
]

dev = []
