[package]
description = "BN128 precompiles for EVM pallet."
edition     = "2018"
license     = "GPL-3.0"
name        = "pallet-evm-precompile-bn128"
version     = "1.3.0"
homepage    = "https://uniarts.me"
repository  = "https://github.com/uni-arts-chain/uni-arts-network"


[dependencies]
# crates
bn                       = { package = "substrate-bn", version = "0.5", default-features = false }
evm                      = { version = "0.20.0", default-features = false, features = ["with-codec"] }
fp-evm                   = { default-features = false, path = "../../../../primitives/evm" }
# substrate
sp-core          = { version = "2.0.0", default-features = false }
sp-io            = { version = "2.0.0", default-features = false }

[features]
default = ["std"]

std = [
	"fp-evm/std",
	"evm/std",
	"sp-core/std",
	"sp-io/std",
]