[package]
description = "DISPATCH precompiles for EVM pallet."
edition     = "2018"
license     = "GPL-3.0"
name        = "pallet-evm-precompile-dispatch"
version     = "1.3.0"
homepage    = "https://uniarts.me"
repository  = "https://github.com/uni-arts-chain/uni-arts-network"


[dependencies]
# crates
codec                    = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
pallet-evm               = { default-features = false, path = "../../../evm" }
fp-evm                   = { default-features = false, path = "../../../../primitives/evm" }
evm                      = { version = "0.20.0", default-features = false, features = ["with-codec"] }
# substrate
frame-support            = { version = "2.0.0", default-features = false }
sp-core                  = { version = "2.0.0", default-features = false }
sp-io                    = { version = "2.0.0", default-features = false }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std = [
	"codec/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
]

substrate-std = [
	"frame-support/std",
	"sp-core/std",
	"sp-io/std",
]
