[package]
description = "ED25519 precompiles for EVM pallet."
edition     = "2018"
license     = "GPL-3.0"
name        = "pallet-evm-precompile-ed25519"
version     = "1.3.0"
homepage    = "https://uniarts.me"
repository  = "https://github.com/uni-arts-chain/uni-arts-network"

[dependencies]
# crates
fp-evm                   = { default-features = false, path = "../../../../primitives/evm" }
ed25519-dalek			 = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }
evm                      = { version = "0.20.0", default-features = false, features = ["with-codec"] }
# substrate
sp-core                  = { version = "2.0.0", default-features = false }
sp-io                    = { version = "2.0.0", default-features = false }

[features]
default = ["std"]

std = [
	"fp-evm/std",
	"ed25519-dalek/std",
	"evm/std",
	"sp-core/std",
	"sp-io/std",
]
