[package]
description = "MODEXP precompiles for EVM pallet."
edition     = "2018"
license     = "GPL-3.0"
name        = "pallet-evm-precompile-modexp"
version     = "1.3.0"
homepage    = "https://uniarts.me"
repository  = "https://github.com/uni-arts-chain/uni-arts-network"


[dependencies]
# crates
fp-evm  = { default-features = false, path = "../../../../primitives/evm" }
evm                      = { version = "0.20.0", default-features = false, features = ["with-codec"] }
num                      = { version = "0.3", features = ["alloc"], default-features = false }
# substrate
sp-core                  = { version = "2.0.0", default-features = false }
sp-io                    = { version = "2.0.0", default-features = false }

[dev-dependencies]
hex = "0.4.0"

[features]
default = ["std"]

std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
	"num/std",
]
